--- a/mackerel/slides/slides.html
+++ b/mackerel/slides/slides.html
@@ -25,6 +25,7 @@ Mackerel Meetup #12</p>
 <h3>自己紹介</h3>
 <ul>
   <li>名前: 森本 健一</li>
+  <li><a href="https://github.com/hogem" class="user-mention">@hogem</a></li>
   <li>2006~
     <ul>
       <li>インフラエンジニア</li>
